--- a/archlinuxcn/opendrop/lilac.yaml
+++ b/archlinuxcn/opendrop/lilac.yaml
@@ -6,16 +6,14 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['tiziodcaio'])
-
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 repo_depends:
-  - python-ctypescrypto
   - python-fleep
   - owlink-git
 
 update_on:
-  - source: aur
-    aur:
+  - source: github
+    github: seemoo-lab/opendrop
+    use_max_tag: true
   - alias: python
