depot-tools-git: sync with aur

--- a/archlinuxcn/depot-tools-git/PKGBUILD
+++ b/archlinuxcn/depot-tools-git/PKGBUILD
@@ -1,4 +1,5 @@
-# Maintainer: relrel <relrelbachar@gmail.com>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
+# Contributor: relrel <relrelbachar@gmail.com>
 # Contributor: Luis Aranguren <pizzaman@hotmail.com>
 # Contributor: Adrian Perez <aperez@igalia.com>
 # Contributor: Chih-Hsuan Yen <yan12125@gmail.com>
@@ -8,17 +9,17 @@
 # Contributor: Andreas Schrafl <aschrafl@gmail.com>
 # Contributor: piojo <aur@zwell.net>
 # Contributor: hack.augusto <hack.augusto@gmail.com>
+
 pkgname=depot-tools-git
-pkgver=r8309.728566654
-pkgrel=4
-pkgdesc="Tools for working with Chromium development"
-arch=('any')
-url="https://chromium.googlesource.com/chromium/tools/depot_tools"
-license=('custom')
-depends=(git)
-optdepends=('bash-completion: for bash completion')
+pkgver=r8578.54c265ea2
+pkgrel=1
+pkgdesc='Tools for working with Chromium development'
+arch=(x86_64)
+url='https://chromium.googlesource.com/chromium/tools/depot_tools'
+license=(custom)
+depends=(git glibc python java-runtime)
 install="$pkgname.install"
-source=("git+$url")
+source=("git+$url.git")
 sha512sums=('SKIP')
 
 pkgver() {
