--- a/archlinuxcn/ppsspp-git/ppsspp-qt.desktop
+++ b/archlinuxcn/ppsspp-git/ppsspp-qt.desktop
@@ -4,6 +4,6 @@ Type=Application
 Name=PPSSPP (Qt)
 GenericName=PSP Emulator
 Comment=PlayStation Portable Simulator Suitable for Playing Portably (PPSSPP)
-Exec=ppsspp-qt %f
+Exec=PPSSPPQt %f
 Icon=ppsspp
 Categories=Game
