--- a/archlinuxcn/ppsspp-git/ppsspp.desktop
+++ b/archlinuxcn/ppsspp-git/ppsspp.desktop
@@ -4,6 +4,6 @@ Type=Application
 Name=PPSSPP
 GenericName=PSP Emulator
 Comment=PlayStation Portable Simulator Suitable for Playing Portably (PPSSPP)
-Exec=ppsspp %f
+Exec=PPSSPPSDL %f
 Icon=ppsspp
 Categories=Game
