--- a/archlinuxcn/ldoce5viewer-oldherl-git/PKGBUILD
+++ b/archlinuxcn/ldoce5viewer-oldherl-git/PKGBUILD
@@ -15,7 +15,7 @@ md5sums=('SKIP')
 
 pkgver() {
   cd "$srcdir/$_pkgname"
-  git describe --tags --always
+  git describe --tags --always | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
