--- a/archlinuxcn/touche/lilac.yaml
+++ b/archlinuxcn/touche/lilac.yaml
@@ -1,12 +1,11 @@
-pre_build_script: aur_pre_build(maintainers='yochananmarqos')
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
-  - source: aur
-    aur: touche
   - source: github
     github: JoseExposito/touche
+    use_max_tag: true
 
 repo_depends:
   - touchegg
