--- a/archlinuxcn/touchegg/lilac.yaml
+++ b/archlinuxcn/touchegg/lilac.yaml
@@ -1,12 +1,11 @@
-pre_build_script: aur_pre_build(maintainers=['AwesomeHaircut','jbouter'])
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
-  - source: aur
-    aur: touchegg
   - source: github
     github: JoseExposito/touchegg
+    use_max_tag: true
 
 maintainers:
   - github: rocka
