--- a/archlinuxcn/panoply/PKGBUILD
+++ b/archlinuxcn/panoply/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: MadPhysicist <jfoxrabinovitz at gmail dot com>
 pkgname=panoply
-pkgver=4.12.13
-pkgrel=2
+pkgver=5.0.0
+pkgrel=1
 pkgdesc='NetCDF, HDF and GRIB Data Viewer by NASA GISS'
 arch=('any')
 url='http://www.giss.nasa.gov/tools/panoply/'
@@ -9,7 +9,7 @@ license=('custom')
 groups=('nasa-tools')
 depends=('java-runtime>=9'
          'hicolor-icon-theme')
-makedepends=('unzip')
+makedepends=('unzip' 'imagemagick')
 optdepends=()
 provides=()
 conflicts=(panoply-nodesktop)
@@ -22,22 +22,12 @@ source=("http://www.giss.nasa.gov/tools/panoply/download/PanoplyJ-${pkgver}.zip"
         "https://www.giss.nasa.gov/tools/panoply/download/Panoply-${pkgver}.sha1.txt"
         'LICENSES'
         'panoply-script.patch'
-        'panoply16.png'
-        'panoply32.png'
-        'panoply48.png'
-        'panoply64.png'
-        'panoply128.png'
         'panoply.desktop')
 noextract=()
-sha1sums=('0ae5b6bbea4f0a6a1a775a0e328d8cc491632324'
-          '553762e387a21d08e5c2c3f7a3fd425d1404fbf3'
+sha1sums=('68830ffd2c033f4dc1af9ab75ab66d6506f169fb'
+          '2eedbc86defd6576849600282c4ac094828f6da0'
           'a83855747414873269e21aaff1a53d13ab5de304'
           '707208d062922b5426303238870e0dd269257697'
-          '97c70755c7d87217556de5b2f1012b3be0d375fb'
-          'c36f0b5d423d626255be0f2d2cbf3eba72618a36'
-          '7becea40d14b5d89a8c4662b84ebe0578a53b1a4'
-          '2347bd0a4644781a86950fa740d8621437049b69'
-          '6151a1fe4a0a19e7b0145f1f58724b72bc38e8e6'
           '39c9a58c25d8f764c928e9dfe75f4f73bb9198f0')
 
 prepare() {
@@ -50,7 +40,12 @@ prepare() {
     fi
     cd ${srcdir}/PanoplyJ
     patch -uN -i ../panoply-script.patch || return 1
-    unzip -px jars/Panoply.jar gov/nasa/giss/panoply/about/panoply.png > ../panoply192.png
+    unzip -px jars/Panoply.jar gov/nasa/giss/panoply/about/panoply_320x320.png > ../panoply320.png
+    declare -a StringArray=("16" "32" "48" "64" "128" "192")
+    for i in "${StringArray[@]}"; do
+        echo "Resizing icon to ${i}x${i}"
+        convert ../panoply320.png -resize ${i}x${i} ../panoply${i}.png
+    done
 }
 
 package() {
@@ -58,11 +53,8 @@ package() {
     install -d -m755 ${pkgdir}/usr/share/java/panoply
     install -Dm644 ${srcdir}/PanoplyJ/jars/*.jar ${pkgdir}/usr/share/java/panoply
     install -Dm755 ${srcdir}/PanoplyJ/panoply.sh ${pkgdir}/usr/bin/panoply
-    install -Dm644 ${srcdir}/panoply16.png ${pkgdir}/usr/share/icons/hicolor/16x16/apps/panoply.png
-    install -Dm644 ${srcdir}/panoply32.png ${pkgdir}/usr/share/icons/hicolor/32x32/apps/panoply.png
-    install -Dm644 ${srcdir}/panoply48.png ${pkgdir}/usr/share/icons/hicolor/48x48/apps/panoply.png
-    install -Dm644 ${srcdir}/panoply64.png ${pkgdir}/usr/share/icons/hicolor/64x64/apps/panoply.png
-    install -Dm644 ${srcdir}/panoply128.png ${pkgdir}/usr/share/icons/hicolor/128x128/apps/panoply.png
-    install -Dm644 ${srcdir}/panoply192.png ${pkgdir}/usr/share/icons/hicolor/192x192/apps/panoply.png
+    for i in "${StringArray[@]}"; do
+        install -Dm644 ${srcdir}/panoply${i}.png ${pkgdir}/usr/share/icons/hicolor/${i}x${i}/apps/panoply.png
+    done
     install -Dm644 ${srcdir}/panoply.desktop ${pkgdir}/usr/share/applications/panoply.desktop
 }
