--- a/archlinuxcn/kicad-git/PKGBUILD
+++ b/archlinuxcn/kicad-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=6.99.0.r239.g38a25fbc4d
 pkgrel=1
 pkgdesc="Electronic schematic and printed circuit board (PCB) design tools"
 arch=('i686' 'x86_64')
-url="http://kicad-pcb.org/"
+url="http://kicad.org/"
 license=('GPL')
 depends=('glew' 'wxgtk3' 'desktop-file-utils' 'boost-libs' 'python'
          'glm' 'curl' 'swig' 'python-wxpython' 'opencascade' 'ngspice>=27')
