--- a/archlinuxcn/proot-git/PKGBUILD
+++ b/archlinuxcn/proot-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: grufo <madmurphy333 at gmail.com>
 
 pkgname='proot-git'
-pkgver='r1246.f6f4300'
+pkgver='r1247.96e5a8b'
 pkgrel=1
 pkgdesc='chroot, mount --bind, and binfmt_misc without privilege/setup'
 arch=(armv7h aarch64 i686 x86_64)
@@ -26,6 +26,8 @@ prepare() {
 build() {
   make -C PRoot/src -f GNUmakefile
 
+  ln -s ../../CHANGELOG.rst PRoot/doc/proot/changelog.rst
+  ln -s ../../CHANGELOG.rst PRoot/doc/care/changelog.rst
   make -C PRoot/doc -f GNUmakefile
 }
 
