[Fixed] netease-musicbox-git: add depends

--- a/archlinuxcn/netease-musicbox-git/PKGBUILD
+++ b/archlinuxcn/netease-musicbox-git/PKGBUILD
@@ -4,13 +4,13 @@
 pkgname=netease-musicbox-git
 _gitname=musicbox
 pkgver=0.3.1.r3.ga0a6969
-pkgrel=1
+pkgrel=2
 pkgdesc="A sexy command line interface musicbox for NetEase based on Python"
 arch=(any)
 url="https://github.com/darknessomi/musicbox"
 depends=('mpg123' 'python-pycryptodomex' 'python-requests' 'python-future'
          'python-fuzzywuzzy' 'python-requests-cache' 'python-importlib-metadata'
-         'python-url-normalize')
+         'python-url-normalize' 'python-cattrs' 'python-levenshtein')
 makedepends=('python-setuptools' 'python-poetry' 'git')
 optdepends=('aria2: music caching'
             'libnotify: notifications'
