--- a/archlinuxcn/netease-musicbox-git/lilac.yaml
+++ b/archlinuxcn/netease-musicbox-git/lilac.yaml
@@ -8,6 +8,7 @@ build_prefix: extra-x86_64
 repo_depends:
   - python-requests-cache
   - python-url-normalize
+  - python-cattrs
 
 pre_build: vcs_update
 
