--- a/archlinuxcn/wev-git/lilac.yaml
+++ b/archlinuxcn/wev-git/lilac.yaml
@@ -9,7 +9,7 @@ post_build: git_pkgbuild_commit
 
 update_on:
   - source: git
-    repo: https://git.sr.ht/~sircmpwn/wev
+    git: https://git.sr.ht/~sircmpwn/wev
     use_commit: true
   - source: aur
     aur: wev-git
