--- a/archlinuxcn/bilili/lilac.yaml
+++ b/archlinuxcn/bilili/lilac.yaml
@@ -5,4 +5,6 @@ update_on:
   - source: github
     github: SigureMo/bilili
     use_latest_tag: true
+  - source: manual
+    manual: 1
   - alias: python
