bgpq3-git: fixed github vcs source

--- a/archlinuxcn/bgpq3-git/PKGBUILD
+++ b/archlinuxcn/bgpq3-git/PKGBUILD
@@ -11,7 +11,7 @@ provides=('bgpq3')
 conflicts=('bgpq3')
 depends=('glibc')
 makedepends=('git')
-source=("$pkgname::git://github.com/snar/bgpq3.git"
+source=("$pkgname::git+https://github.com/snar/bgpq3.git"
         "01-fix-man-location.patch")
 sha256sums=('SKIP'
             '4723df01270b3c4b712768b9f867ac72c9070ab7a96469f0aa34d65769e8412c')
