Fix lilac url as well...

--- a/archlinuxcn/arch-arm-git/lilac.yaml
+++ b/archlinuxcn/arch-arm-git/lilac.yaml
@@ -7,7 +7,7 @@ pre_build: vcs_update
 post_build: git_pkgbuild_commit
 update_on:
   - source: git
-    git: git://github.com/yuyichao/arch-arm
+    git: https://github.com/yuyichao/arch-arm
     use_commit: true
   - source: manual
     manual: 1
