[Update] tauon-music-box: v7.0.1

--- a/archlinuxcn/tauon-music-box/lilac.yaml
+++ b/archlinuxcn/tauon-music-box/lilac.yaml
@@ -11,6 +11,7 @@ repo_depends:
   - python-isounidecode
   - python-pylyrics
   - python-pysdl2
+  - python-pulsectl
 
 update_on:
   - source: github
