firefox-nightly, rust-nightly, vim-lily: try the new lilac_throttle option

--- a/archlinuxcn/rust-nightly/lilac.yaml
+++ b/archlinuxcn/rust-nightly/lilac.yaml
@@ -2,5 +2,6 @@ update_on:
 - source: regex
   regex: \[pkg\.rust\]\nversion = "([^"]+)"
   url: https://static.rust-lang.org/dist/channel-rust-nightly.toml
+  lilac_throttle: 7d
 maintainers:
 - github: lilydjwg
