--- a/archlinuxcn/firefox-nightly/lilac.yaml
+++ b/archlinuxcn/firefox-nightly/lilac.yaml
@@ -5,3 +5,4 @@ update_on:
   cmd: curl -sS https://ftp.mozilla.org/pub/firefox/nightly/latest-mozilla-central/
     | grep -A2 'firefox-.*.en-US.linux-x86_64.tar.bz2' | grep -oP '(?<=firefox-).+?(?=\.en-US)|\b\d+-\w+-\d+
     \d+:\d+\b' | tail -2 | xargs
+  lilac_throttle: 3d
