--- a/archlinuxcn/juicefs-oss/lilac.yaml
+++ b/archlinuxcn/juicefs-oss/lilac.yaml
@@ -7,5 +7,5 @@ update_on:
   - source: github
     github: juicedata/juicefs
     use_latest_release: true
-    from_pattern: ^v(.*)
-    to_pattern: \1
+    from_pattern: ^v([^-]*)-?(.*)?
+    to_pattern: \1\2
