--- a/archlinuxcn/emacs-git/PKGBUILD
+++ b/archlinuxcn/emacs-git/PKGBUILD
@@ -91,12 +91,7 @@ depends=("${depends_nox[@]}" "harfbuzz" "libxpm")
 makedepends=('git')
 provides=('emacs' 'emacs-pretest' 'emacs26-git' 'emacs-27-git' 'emacs28-git' 'emacs-seq' 'emacs-nox')
 conflicts=('emacs' 'emacs-pretest' 'emacs26-git' 'emacs-27-git' 'emacs28-git' 'emacs-seq' 'emacs-nox')
-#
-# If Savannah fails for reasons, use Github's mirror
-#
-#source=("emacs-git::git://git.savannah.gnu.org/emacs.git")
-#
-source=("emacs-git::git://github.com/emacs-mirror/emacs.git")
+source=("emacs-git::git://git.savannah.gnu.org/emacs.git")
 options=(!strip)
 install=emacs-git.install
 b2sums=('SKIP')
