fix: emacs-native-comp-git, switch source back to savannah

--- a/archlinuxcn/emacs-native-comp-git/lilac.yaml
+++ b/archlinuxcn/emacs-native-comp-git/lilac.yaml
@@ -9,7 +9,7 @@ repo_depends:
   - libgccjit
 
 update_on:
-  - source: github
-    github: emacs-mirror/emacs
+  - source: vcs
+    vcs: git://git.savannah.gnu.org/emacs.git
   - source: aur
     aur: emacs-git
