--- a/archlinuxcn/r-reticulate/lilac.yaml
+++ b/archlinuxcn/r-reticulate/lilac.yaml
@@ -7,6 +7,7 @@ repo_depends:
   - r-png
   - r-rappdirs
   - r-rcpp
+  - r-rcpptoml
   - r-withr
 update_on:
   - regex: reticulate_([\d._-]+).tar.gz
