update: emacs-git & emacs-native-comp-git, use git instead of vcs

--- a/archlinuxcn/emacs-git/lilac.yaml
+++ b/archlinuxcn/emacs-git/lilac.yaml
@@ -6,7 +6,7 @@ build_prefix: extra-x86_64
 post_build: aur_post_build
 
 update_on:
-  - source: vcs
-    vcs: git://git.savannah.gnu.org/emacs.git
+  - source: git
+    git: git://git.savannah.gnu.org/emacs.git
   - source: aur
     aur: emacs-git
