--- a/archlinuxcn/emacs-native-comp-git/lilac.yaml
+++ b/archlinuxcn/emacs-native-comp-git/lilac.yaml
@@ -9,7 +9,7 @@ repo_depends:
   - libgccjit
 
 update_on:
-  - source: vcs
-    vcs: git://git.savannah.gnu.org/emacs.git
+  - source: git
+    git: git://git.savannah.gnu.org/emacs.git
   - source: aur
     aur: emacs-git
