lib32-libnumactl => lib32-libnuma

--- a/archlinuxcn/lib32-x265/lilac.yaml
+++ b/archlinuxcn/lib32-x265/lilac.yaml
@@ -7,7 +7,7 @@ update_on:
   - source: aur
     aur: lib32-x265
   - alias: alpm-lilac
-    alpm: lib32-libnumactl
+    alpm: lib32-libnuma
     provided: libnuma.so
     strip_release: true
   - source: manual
