lib32-x265: fix repo_depends again

--- a/archlinuxcn/lib32-x265/lilac.yaml
+++ b/archlinuxcn/lib32-x265/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: DDoSolitary
 build_prefix: multilib
 repo_depends:
-  - lib32-libnumactl
+  - lib32-libnuma
 update_on:
   - source: aur
     aur: lib32-x265
