fix: remove `npm --user root`
Since npm 7, the `--user` option is no longer available. `--user root`
not only doesn't fix the permission problem, but also installs the
package called "root", which conflicts with other packages that also
have the `--user root` option.

--- a/archlinuxcn/pnpm/PKGBUILD
+++ b/archlinuxcn/pnpm/PKGBUILD
@@ -13,7 +13,7 @@ noextract=("$pkgname-$pkgver.tgz")
 sha256sums=('3c43a6dce8ed04f77b234338fdfbaad993f0adb22c41ab78dd81bba8e0ea88d2')
 
 package() {
-  npm install -g --user root --prefix "$pkgdir"/usr "$srcdir/$pkgname-$pkgver.tgz"
+  npm install -g --prefix "$pkgdir"/usr "$srcdir/$pkgname-$pkgver.tgz"
 
   find "$pkgdir"/usr -type d -exec chmod 755 {} +
   chown -R root:root "$pkgdir"
