--- a/archlinuxcn/babel-eslint/PKGBUILD
+++ b/archlinuxcn/babel-eslint/PKGBUILD
@@ -12,7 +12,8 @@ noextract=("$pkgname-$pkgver.tgz")
 sha512sums=('89f59a4c743471efb8e3c098a29f0076b42206c1ab9c2f9b3207f2285762e84b0f2d30161be41fc8378ce8e1fe1665a72af12ae4d9c130bbe50543ca419a034a')
 
 package() {
-  npm install -g --user root --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
+  npm install -g --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
+  chown -R root:root "$pkgdir"
 
   # Fix permissions
   find "$pkgdir/usr" -type d -exec chmod 755 '{}' +
