--- a/archlinuxcn/librewolf/lilac.yaml
+++ b/archlinuxcn/librewolf/lilac.yaml
@@ -6,10 +6,14 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['lsf'])
+post_build: git_pkgbuild_commit
 
-post_build: aur_post_build
+time_limit_hours: 4
 
 update_on:
-  - source: aur
-    aur: 
+  - source: gitlab
+    gitlab: librewolf-community/browser/common
+    use_latest_tag: true
+  - source: gitlab
+    gitlab: librewolf-community/settings.git
+    use_latest_tag: true
