--- a/archlinuxcn/librewolf/lilac.yaml
+++ b/archlinuxcn/librewolf/lilac.yaml
@@ -13,7 +13,7 @@ time_limit_hours: 4
 update_on:
   - source: gitlab
     gitlab: librewolf-community/browser/common
-    use_latest_tag: true
+    use_max_tag: true
   - source: gitlab
     gitlab: librewolf-community/settings.git
-    use_latest_tag: true
+    use_max_tag: true
