--- a/archlinuxcn/python-opencensus/lilac.yaml
+++ b/archlinuxcn/python-opencensus/lilac.yaml
@@ -4,6 +4,7 @@ build_prefix: extra-x86_64
 update_on:
   - source: github
     github: census-instrumentation/opencensus-python
-    use_latest_release: true
+    use_max_tag: true
+    include_regex: 'v(\d+.\d+.\d+)'
   - alias: python
 # vim:set ts=2 sw=2 et:
