[librewolf] Fix typo

--- a/archlinuxcn/librewolf/lilac.yaml
+++ b/archlinuxcn/librewolf/lilac.yaml
@@ -15,5 +15,5 @@ update_on:
     gitlab: librewolf-community/browser/common
     use_max_tag: true
   - source: gitlab
-    gitlab: librewolf-community/settings.git
+    gitlab: librewolf-community/settings
     use_max_tag: true
