fix: emacs{-git,-native-comp-git}, use_commit #2635

--- a/archlinuxcn/emacs-git/lilac.yaml
+++ b/archlinuxcn/emacs-git/lilac.yaml
@@ -8,5 +8,6 @@ post_build: aur_post_build
 update_on:
   - source: git
     git: git://git.savannah.gnu.org/emacs.git
+    use_commit: true
   - source: aur
     aur: emacs-git
