--- a/archlinuxcn/emacs-native-comp-git/lilac.yaml
+++ b/archlinuxcn/emacs-native-comp-git/lilac.yaml
@@ -11,5 +11,6 @@ repo_depends:
 update_on:
   - source: git
     git: git://git.savannah.gnu.org/emacs.git
+    use_commit: true
   - source: aur
     aur: emacs-git
